src/test/test_cases/invalid/syntaxErr/forLoop/noDeclaration.wacc
# No declaration of looping variable is present

# Output
# #syntax_error#

# Exit:
# 100

# Program:

begin
  for (i < 7) do
    println "This looks a bit more like a while loop"
  done
end